# squeeze-strategy

./: .env.example  AUTOMATED_PICKER_README.md  COMPLETION_REPORT.md  README.md  REFACTOR_REPORT.md  pyproject.toml  recommendations.csv
backtests/: sector_rotation_20260328.csv  sector_rotation_20260329.csv  sp500_backtest_results.json  sp500_summary.json  tw_summary.json  us_balanced_backtest.json  us_summary.json
configs/: cn_universe.json  tw_universe.csv  tw_universe.json  us_universe.json
deploy/: crontab.example  systemd.example
docs/: AUTO_TRADING_GUIDE.md  EXPANSION_PLAN.md  STOCK_SELECTION_LOGIC.md
exports/: 2026-03-28_daily_report_cn.html  2026-03-28_daily_report_cn.md  2026-03-28_daily_report_tw.html  2026-03-28_daily_report_tw.md  2026-03-28_daily_report_us.html  2026-03-28_daily_report_us.md  daily_recommendations_2026-03-28.csv  daily_recommendations_2026-03-28.json  daily_recommendations_cn_2026-03-28.csv  daily_recommendations_cn_2026-03-28.json  daily_recommendations_tw_2026-03-28.csv  daily_recommendations_tw_2026-03-28.json  daily_recommendations_tw_2026-03-29.json  daily_recommendations_us_2026-03-28.csv  daily_recommendations_us_2026-03-28.json  performance_summary_2026-03-28.json  performance_tracking_2026-03-28.csv  portfolio.json  portfolio_report_20260329.csv  trade_orders_paper_2026-03-29.csv  trade_orders_paper_2026-03-29.json
scripts/: analyze_signals.py  auto_execute_trades.py  check_market_hours.py  daily_recommendations.py  daily_stock_picker.py  download_historical_data.py  fetch_tw_stocks.py  historical_backtest_tracker.py  (+5 more)
(+225 files in other folders)
